Login funcionando com consulta no BD

--- a/src/main/java/br/com/cafi/salaodesktop/visao/TelaInicial.form
+++ b/src/main/java/br/com/cafi/salaodesktop/visao/TelaInicial.form
@@ -122,6 +122,14 @@
                 </MenuItem>
               </SubComponents>
             </Menu>
+            <MenuItem class="javax.swing.JMenuItem" name="jMenuItem10">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Sair"/>
+              </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuItem10ActionPerformed"/>
+              </Events>
+            </MenuItem>
           </SubComponents>
         </Menu>
       </SubComponents>
