Cadastrar Usuario permissao menu não disponivel quando não possui permissão

--- a/src/main/java/br/com/cafi/salaodesktop/visao/TelaInicial.form
+++ b/src/main/java/br/com/cafi/salaodesktop/visao/TelaInicial.form
@@ -14,12 +14,12 @@
                 <Property name="text" type="java.lang.String" value="Produto"/>
               </Properties>
               <SubComponents>
-                <MenuItem class="javax.swing.JMenuItem" name="jMenuItem1">
+                <MenuItem class="javax.swing.JMenuItem" name="cadastrarProdutoMenuItem">
                   <Properties>
                     <Property name="text" type="java.lang.String" value="Cadastrar Produto"/>
                   </Properties>
                   <Events>
-                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuItem1ActionPerformed"/>
+                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="cadastrarProdutoMenuItemActionPerformed"/>
                   </Events>
                 </MenuItem>
                 <MenuItem class="javax.swing.JMenuItem" name="jMenuItem2">
