--- a/src/main/java/br/com/cafi/salaodesktop/visao/TelaLogin.form
+++ b/src/main/java/br/com/cafi/salaodesktop/visao/TelaLogin.form
@@ -100,6 +100,9 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JPasswordField" name="senhaPasswordField">
+      <Events>
+        <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="senhaPasswordFieldKeyPressed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel3">
       <Properties>
