--- a/src/main/java/br/com/cafi/salaodesktop/visao/CadastrarProduto.form
+++ b/src/main/java/br/com/cafi/salaodesktop/visao/CadastrarProduto.form
@@ -105,7 +105,7 @@
     <Component class="javax.swing.JFormattedTextField" name="precoCompraFormattedTextField">
       <Properties>
         <Property name="formatterFactory" type="javax.swing.JFormattedTextField$AbstractFormatterFactory" editor="org.netbeans.modules.form.editors.AbstractFormatterFactoryEditor">
-          <Format subtype="0" type="0"/>
+          <Format format="#,###.00" subtype="-1" type="0"/>
         </Property>
       </Properties>
     </Component>
@@ -117,7 +117,7 @@
     <Component class="javax.swing.JFormattedTextField" name="precoVendaFormattedTextField">
       <Properties>
         <Property name="formatterFactory" type="javax.swing.JFormattedTextField$AbstractFormatterFactory" editor="org.netbeans.modules.form.editors.AbstractFormatterFactoryEditor">
-          <Format subtype="0" type="0"/>
+          <Format format="#,###.00" subtype="-1" type="0"/>
         </Property>
       </Properties>
     </Component>
@@ -142,7 +142,7 @@
     <Component class="javax.swing.JFormattedTextField" name="quantidadeEstoqueFormattedTextField">
       <Properties>
         <Property name="formatterFactory" type="javax.swing.JFormattedTextField$AbstractFormatterFactory" editor="org.netbeans.modules.form.editors.AbstractFormatterFactoryEditor">
-          <Format subtype="0" type="0"/>
+          <Format format="#0" subtype="-1" type="0"/>
         </Property>
       </Properties>
     </Component>
